--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css/all.css">
+    <link rel="stylesheet" href="style/all.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="con">
+        <div class="main_paint">
+        </div>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
