--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="con">
-        <div class="main_paint">
+        <div class="main_paint" style="cursor: pointer;">
         </div>
     </div>
     <script src="index.js"></script>
