Finished styling user side and the project

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
                     <input type="range" id="SquareSize" class="pixel_count" value="" min="1" max="100">
                     <span id="squareSizeValue"></span>
                 </div>
-                <button id="rainbowMode" class="rainbow_btn">Rainbow</button>
-                <button id="colorMode">Color</button>
-                <button id="eraserMode">Eraser</button>
-                <button id="clearBtn">Clear</button>
+                <div class="userButtons">
+                    <button id="rainbowMode">Rainbow</button>
+                    <button id="colorMode" class="active">Color</button>
+                    <button id="eraserMode">Eraser</button>
+                    <button id="clearBtn">Clear</button>
+                </div>
             </div>
         </div>
 
